# Diploma-thesis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
assets/: brand.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_connections.py
backend/src/ariadne_doc_assistant/: __init__.py  config.py  logging_conf.py  main.py
backend/src/ariadne_doc_assistant/api/: routes.py
backend/src/ariadne_doc_assistant/connectors/: __init__.py  base.py  confluence_stub.py  git_repo.py  github_source.py  interfaces.py  local_docs_target.py  models.py  servicenow_stub.py  webhook_stub.py
backend/src/ariadne_doc_assistant/core/: pipeline.py  policies.py  proposals.py
backend/src/ariadne_doc_assistant/llm/: client.py  prompts.py
backend/src/ariadne_doc_assistant/locator/: __init__.py  local.py
backend/src/ariadne_doc_assistant/static/: styles.css
backend/src/ariadne_doc_assistant/storage/: db.py  models.py  orm.py  session.py
backend/src/ariadne_doc_assistant/templates/: landing.html
backend/src/ariadne_doc_assistant/utils/: plugin_loader.py
backend/tests/: test_pipeline.py  test_policies.py  test_protected_blocks.py  test_routes.py
docs/: architecture.md  branding.md  demo-flow.md  evaluation-plan.md  future-connectors.md  future-roadmap.md  local-workflow.md  threat-model.md
sample_docs/: api.md
scripts/: run_docker.sh  run_local.sh
